Fixed volume setting on IE wrapping text and added padding for mobile webkit.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -612,6 +612,17 @@ input, button, select, textarea
     max-height 90px
     vertical-align middle
 
+  .volume-label-cell
+    padding-top 7px
+
+  .notification-volume
+    // IE sizes range inputs differently than webkit.  It adds padding and has a
+    // much wider width.
+    min-height 15px
+    max-width 130px
+    margin 2px 3px
+    padding 5px 0
+
 
 html
   min-height 100%
